<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/fab_margin"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="5dp"
            android:hint="@string/hint_username"
            android:gravity="center_vertical"
            android:inputType="textNoSuggestions"
            android:background="@drawable/bg_edit"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="5dp"
            android:hint="@string/hint_password"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:background="@drawable/bg_edit"/>

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_login" />
    </LinearLayout>
</LinearLayout>