<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:orientation="vertical"
    android:background="@color/gray">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_todo_report"
                android:layout_width="match_parent"
                android:layout_height="@dimen/ll_todo_height"
                android:background="@drawable/bg_ll_todo"
                android:paddingLeft="@dimen/ll_todo_padding"
                android:clickable="true"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_todo_report"
                    android:textSize="@dimen/tv_todo_size"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_todo_official"
                android:layout_width="match_parent"
                android:layout_height="@dimen/ll_todo_height"
                android:background="@drawable/bg_ll_todo"
                android:paddingLeft="@dimen/ll_todo_padding"
                android:clickable="true"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_todo_offcial"
                    android:textSize="@dimen/tv_todo_size"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_todo_message"
                android:layout_width="match_parent"
                android:layout_height="@dimen/ll_todo_height"
                android:background="@drawable/bg_ll_todo"
                android:paddingLeft="@dimen/ll_todo_padding"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_todo_message"
                    android:textSize="@dimen/tv_todo_size"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_todo_process"
                android:layout_width="match_parent"
                android:layout_height="@dimen/ll_todo_height"
                android:background="@drawable/bg_ll_todo"
                android:paddingLeft="@dimen/ll_todo_padding"
                android:clickable="true"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_todo_process"
                    android:textSize="@dimen/tv_todo_size"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_todo_task"
                android:layout_width="match_parent"
                android:layout_height="@dimen/ll_todo_height"
                android:background="@drawable/bg_ll_todo"
                android:paddingLeft="@dimen/ll_todo_padding"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_todo_task"
                    android:textSize="@dimen/tv_todo_size"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_todo_document"
                android:layout_width="match_parent"
                android:layout_height="@dimen/ll_todo_height"
                android:background="@drawable/bg_ll_todo"
                android:paddingLeft="@dimen/ll_todo_padding"
                android:clickable="true"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_todo_document"
                    android:textSize="@dimen/tv_todo_size"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>
