<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.workReport.WorkReportMainActivity"
    tools:showIn="@layout/activity_official_document_main"
    android:orientation="vertical"
    android:background="@color/gray"
    android:padding="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_my_official_document"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ll_todo_height"
            android:background="@drawable/bg_ll_todo"
            android:paddingLeft="@dimen/ll_todo_padding"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/iv_report_width"
                android:layout_height="@dimen/iv_report_height"
                android:src="@mipmap/official_document_my"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/tv_my_official_document"
                android:textSize="@dimen/tv_todo_size"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_my_approve"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ll_todo_height"
            android:background="@drawable/bg_ll_todo"
            android:paddingLeft="@dimen/ll_todo_padding"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/iv_report_width"
                android:layout_height="@dimen/iv_report_height"
                android:src="@mipmap/official_document_my_approve"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/tv_my_approve"
                android:textSize="@dimen/tv_todo_size"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_my_send_official_document"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ll_todo_height"
            android:background="@drawable/bg_ll_todo"
            android:paddingLeft="@dimen/ll_todo_padding"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/iv_report_width"
                android:layout_height="@dimen/iv_report_height"
                android:src="@mipmap/my_send_official_document"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/tv_my_send_official_document"
                android:textSize="@dimen/tv_todo_size"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>