<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_report_detail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/ll_detail_margin">

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_work_report_detail_title"
                    android:textSize="18dp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_marginLeft="10dp"
                    android:id="@+id/tv_work_report_detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="这是测试标题"
                    android:textSize="@dimen/tv_detail_title_size"
                    android:textColor="@color/red"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="5dp"
                    android:padding="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_work_report_detail_leader"
                        android:textSize="18dp"
                        android:textColor="@color/bule"/>

                    <TextView
                        android:id="@+id/tv_work_report_detail_leader"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="马云（CEO）"
                        android:textSize="@dimen/tv_detail_title_size"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="5dp"
                    android:paddingLeft="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_work_report_detail_create_time"
                        android:textSize="18dp"
                        android:textColor="@color/bule"/>

                    <TextView
                        android:id="@+id/tv_work_report_detail_create_time"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="2016-7-21"
                        android:textSize="@dimen/tv_detail_title_size"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="5dp"
                    android:padding="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_work_report_detail_update_time"
                        android:textSize="18dp"
                        android:textColor="@color/bule"/>

                    <TextView
                        android:id="@+id/tv_work_report_detail_update_time"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="2016-7-28"
                        android:textSize="@dimen/tv_detail_title_size"
                        android:textColor="@color/black"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="5dp"
                    android:padding="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_work_report_detail_content"
                        android:textSize="18dp"
                        android:textColor="@color/bule"/>

                    <TextView
                        android:id="@+id/tv_work_report_detail_content"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="这是测试的内容，君不见黄河之水天上来，奔流到海不复回"
                        android:textSize="@dimen/tv_detail_title_size" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="5dp"
                    android:padding="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_work_report_detail_attch"
                        android:textSize="18dp"
                        android:textColor="@color/bule"/>

                    <TextView
                        android:id="@+id/tv_work_report_detail_attch"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="相关附件，需要调整"
                        android:textSize="@dimen/tv_detail_title_size" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>